# crafter

./: Cargo.toml  README.md
.github/workflows/: build-matrix.yml  release-assets.yml
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  base.rs  challenge.rs  config.rs  context.rs  mod.rs  respond.rs  runtime.rs  test.rs  tester.rs
src/constants/: mod.rs  output_keys.rs  project.rs
src/container/: config.rs  docker.rs  mod.rs  service.rs
src/core/: challenge.rs  config.rs  detector.rs  git.rs  mod.rs  tester.rs  validator.rs
src/output/: compat.rs  config_loader.rs  format.rs  formatter.rs  level.rs  mod.rs  primitives.rs  utils.rs  writer.rs
src/output/formatters/: challenge_list.rs  config.rs  language_list.rs  mod.rs  next_steps.rs  stages.rs  status.rs  tester_list.rs  validation.rs
src/types/: config.rs  course.rs  error.rs  mod.rs  output.rs  test.rs  tester.rs
src/utils/: env.rs  fs.rs  mod.rs  slug.rs
tests/: cli_integration.rs  output_integration.rs
